# ucan-capabilities-object

./: Cargo.toml  README.md
src/: ability.rs  caveats.rs  lib.rs  nota_bene.rs
