[package]
name = "ucan-capabilities-object"
version = "0.2.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
description = "Shared Capabilities object structure found in UCANs, CACAOs and ReCaps"
keywords = ["ucan", "siwe", "cacao", "recap"]
repository = "https://github.com/spruceid/ucan-capabilities-object/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iri-string = { version = "0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
nutype = { version = "0.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
